[package]
name = "best_skn_utils"
description = "A Simple Utility Library For Rust"
version = "1.2.4"
edition = "2021"
rust-version = "1.80.0"
readme = "README.md"
license = "MIT"
keywords = ["utility", "library"]
categories = ["command-line-utilities", "config"]
include = ["/src", "LICENSE"]
authors = ["SKN Shukhan"]
repository = "https://github.com/skn437/skn-rust-utils"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
best_skn_message = "1.2.5"
config = { version = "0.14.0", features = ["toml", "yaml"] }
serde = { version = "1.0.208", features = ["derive"] }
num = "0.4.3"
rand = "0.9.0"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
