[package]
name = "best_skn_utils"
description = "A Simple Utility Library For Rust"
version = "1.3.0"
edition = "2024"
rust-version = "1.93.0"
readme = "README.md"
license = "MIT"
keywords = ["utility", "library"]
categories = ["command-line-utilities", "config"]
include = ["/src", "LICENSE"]
authors = ["SKN Shukhan"]
repository = "https://github.com/skn437/skn-rust-utils"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
best_skn_message = "1.3.0"
config = { version = "0.15.23", features = ["toml", "yaml"] }
serde = { version = "1.0.208", features = ["derive"] }
num = "0.4.3"
rand = "0.10.1"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
